[package]
name = "jmap-proxy-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libjmap = { git = "https://git.meli.delivery/meli/libjmap" }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
dirs = "3.0"
