[package]
name = "jmap-proxy-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libjmap = { git = "https://git.meli.delivery/meli/libjmap" }

dirs = "3.0"

serde = "1.0"
serde_json = "1.0"

tide = "0.16.0"
tide-http-auth = { git = "https://github.com/ryzokuken/tide-http-auth" }

async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.51"
